# semantic-router

./: README.md  example_server.py  pyproject.toml
.github/workflows/: python-app.yml
data/: .gitkeep
docs/semantic-router/: Batch encode.bru  Encode.bru  Health check.bru
notebooks/: introduction.ipynb
semantic_router/: __init__.py
semantic_router/embedding/: vector.py
semantic_router/encoder/: __init__.py  base.py  huggingface.py
semantic_router/router/: __init__.py  router.py
tests/embedding/: test_vector.py
tests/router/: test_router.py
