[project]
name = "semantic-router"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.13",
    "flake8>=7.3.0",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=4.1.0",
    "uvicorn>=0.35.0",
]

[tool.setuptools.packages.find]
where   = ["."]
include = ["semantic_router*"]      # ship only code
exclude = ["data*", "notebooks*"]   # ignore assets & notebooks
